--- a/src/application/application.css
+++ b/src/application/application.css
@@ -1,7 +1,7 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 #clearAllButton {
     -fx-background-image: url('resources/clean.png');
-    -fx-background-size: 50px;
+    -fx-background-size: 40px;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center center;
 }
@@ -27,4 +27,15 @@
 
 #squareToggleButton:selected {
   -fx-background-image: url('resources/squareChecked.png');
+}
+
+#moveToggleButton {
+    -fx-background-image: url('resources/moveNoClicked.png');
+    -fx-background-size: 50px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center;
+}
+
+#moveToggleButton:selected {
+  -fx-background-image: url('resources/moveClicked.png');
 }
