--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -20,7 +20,7 @@
                   <MenuItem fx:id="openFileMenuItem" mnemonicParsing="false" text="Open File" />
                   <MenuItem fx:id="saveFileMenuItem" mnemonicParsing="false" text="Save File" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem fx:id="settingsMenuItem" mnemonicParsing="false" text="Settings" />
+                  <MenuItem fx:id="settingsMenuItem" mnemonicParsing="false" onAction="#settingsMenuItem_OnAction" text="Settings" />
               	  <MenuItem fx:id="exitMenuItem" mnemonicParsing="false" onAction="#exitMenuItem_OnAction" text="Exit" />
             </items>
           </Menu>
