--- a/src/application/Settings.fxml
+++ b/src/application/Settings.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SettingsController">
    <children>
-      <Button fx:id="saveButton" layoutX="54.0" layoutY="248.0" mnemonicParsing="false" />
-      <Button fx:id="cancelButton" layoutX="136.0" layoutY="236.0" mnemonicParsing="false" />
+      <Button fx:id="saveButton" layoutX="54.0" layoutY="226.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <Button fx:id="cancelButton" layoutX="150.0" layoutY="226.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <Label layoutX="14.0" layoutY="14.0" text="Background color:" fx:id="backgroundColorLabel"/>
    </children>
 </AnchorPane>
