--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -18,7 +18,7 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
                   <MenuItem fx:id="openFileMenuItem" mnemonicParsing="false" text="Open File" />
-                  <MenuItem fx:id="saveFileMenuItem" mnemonicParsing="false" text="Save File" />
+                  <MenuItem fx:id="saveFileMenuItem" mnemonicParsing="false" text="Save File" onAction="#saveFileMenuItem_OnAction" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="settingsMenuItem" mnemonicParsing="false" onAction="#settingsMenuItem_OnAction" text="Settings" />
               	  <MenuItem fx:id="exitMenuItem" mnemonicParsing="false" onAction="#exitMenuItem_OnAction" text="Exit" />
