--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -17,7 +17,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem fx:id="openFileMenuItem" mnemonicParsing="false" text="Open File" />
+                  <MenuItem fx:id="openFileMenuItem" mnemonicParsing="false" text="Open File" onAction="#openFileMenuItem_OnAction" />
                   <MenuItem fx:id="saveFileMenuItem" mnemonicParsing="false" text="Save File" onAction="#saveFileMenuItem_OnAction" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="settingsMenuItem" mnemonicParsing="false" onAction="#settingsMenuItem_OnAction" text="Settings" />
