--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -10,6 +11,7 @@
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#anchorPane_OnMouseClicked" prefHeight="700.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
    <children>
@@ -17,8 +19,8 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem fx:id="openFileMenuItem" mnemonicParsing="false" text="Open File" onAction="#openFileMenuItem_OnAction" />
-                  <MenuItem fx:id="saveFileMenuItem" mnemonicParsing="false" text="Save File" onAction="#saveFileMenuItem_OnAction" />
+                  <MenuItem fx:id="openFileMenuItem" mnemonicParsing="false" onAction="#openFileMenuItem_OnAction" text="Open File" />
+                  <MenuItem fx:id="saveFileMenuItem" mnemonicParsing="false" onAction="#saveFileMenuItem_OnAction" text="Save File" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="settingsMenuItem" mnemonicParsing="false" onAction="#settingsMenuItem_OnAction" text="Settings" />
               	  <MenuItem fx:id="exitMenuItem" mnemonicParsing="false" onAction="#exitMenuItem_OnAction" text="Exit" />
@@ -32,7 +34,14 @@
         </menus>
       </MenuBar>
       <Separator layoutY="90.0" prefHeight="10.0" prefWidth="1366.0" />
-      <Pane fx:id="mainPane" layoutY="95.0" onMouseClicked="#mainPane_OnMouseClicked" onMouseDragged="#mainPane_OnMouseDragged" prefHeight="608.0" prefWidth="1366.0" />
+      <Pane fx:id="mainPane" layoutY="95.0" onMouseClicked="#mainPane_OnMouseClicked" onMouseDragged="#mainPane_OnMouseDragged" prefHeight="608.0" prefWidth="1366.0">
+         <children>
+            <Label fx:id="middleLabel" layoutX="454.0" layoutY="296.0" text="elooooooo">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+         </children></Pane>
       <Button fx:id="clearAllButton" layoutX="324.0" layoutY="36.0" mnemonicParsing="false" onMouseClicked="#clearAllButton_OnMouseClicked" prefHeight="50.0" prefWidth="50.0" />
       <ToggleButton fx:id="circleToggleButton" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <ToggleButton fx:id="squareToggleButton" layoutX="70.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
