--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -42,6 +42,10 @@
       <ToggleButton fx:id="squareToggleButton" layoutX="70.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <ToggleButton fx:id="moveToggleButton" layoutX="186.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <ToggleButton fx:id="lineToggleButton" layoutX="127.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <Label fx:id="middleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="490" layoutY="300" mnemonicParsing="false" prefHeight="58.0" prefWidth="365.0">
+         <font>
+            <Font name="Gabriola" size="64.0" />
+         </font></Label>
    </children>
    <opaqueInsets>
       <Insets />
