--- a/src/application/Settings.fxml
+++ b/src/application/Settings.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -8,6 +9,7 @@
    <children>
       <Button fx:id="saveButton" layoutX="54.0" layoutY="226.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <Button fx:id="cancelButton" layoutX="150.0" layoutY="226.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      <Label layoutX="14.0" layoutY="14.0" text="Background color:" fx:id="backgroundColorLabel"/>
+      <Label fx:id="backgroundColorLabel" layoutX="14.0" layoutY="14.0" text="Background color:" />
+      <ComboBox fx:id="backgroundColorBox" layoutX="75.0" layoutY="77.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
