--- a/src/application/application.css
+++ b/src/application/application.css
@@ -50,3 +50,10 @@
 #lineToggleButton:selected {
   -fx-background-image: url('resources/lineChecked.png');
 }
+
+#removeToggleButton {
+    -fx-background-image: url('resources/remove.png');
+    -fx-background-size: 40px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center;
+}
