--- a/src/application/Settings.fxml
+++ b/src/application/Settings.fxml
@@ -10,6 +10,9 @@
       <Button fx:id="saveButton" layoutX="54.0" layoutY="226.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <Button fx:id="cancelButton" layoutX="150.0" layoutY="226.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <Label fx:id="backgroundColorLabel" layoutX="14.0" layoutY="14.0" text="Background color:" />
-      <ComboBox fx:id="backgroundColorBox" layoutX="75.0" layoutY="77.0" prefWidth="150.0" />
+      <ComboBox fx:id="backgroundColorBox" layoutX="136.0" layoutY="10.0" prefWidth="150.0" />
+      <Label fx:id="circleColorLabel" layoutX="14.0" layoutY="47.0" text="Circle color:" />
+      <Label fx:id="rectangleColorLabel" layoutX="15.0" layoutY="78.0" prefHeight="17.0" prefWidth="88.0" text="Rectangle color:" />
+      <Label fx:id="lineColorLabel" layoutX="16.0" layoutY="111.0" prefHeight="17.0" prefWidth="69.0" text="Line color:" />
    </children>
 </AnchorPane>
