--- a/src/application/settings.css
+++ b/src/application/settings.css
@@ -4,3 +4,10 @@
     -fx-background-repeat: no-repeat;
     -fx-background-position: center center;
 }
+
+#cancelButton {
+    -fx-background-image: url('resources/remove.png');
+    -fx-background-size: 40px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center;
+}
