--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -48,6 +48,7 @@
          </font></Label>
       <ToggleButton fx:id="removeToggleButton" layoutX="293.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <Label fx:id="circleNumbers" layoutX="1259.0" layoutY="44.0" prefHeight="33.0" prefWidth="50.0" text="Label" />
+      <Button fx:id="enableStatisticsButton" layoutX="1120.0" layoutY="48.0" mnemonicParsing="false" text="Show Statistics" onAction="#enableStaticticsButton_OnAction"/>
    </children>
    <opaqueInsets>
       <Insets />
