--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -47,7 +48,7 @@
             <Font name="Gabriola" size="44.0" />
          </font></Label>
       <ToggleButton fx:id="removeToggleButton" layoutX="293.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      <Accordion fx:id="accordionStats" layoutX="1163.0" layoutY="29.0">
+      <Accordion fx:id="accordionStats" layoutX="1100.0" layoutY="29.0" prefHeight="300.0" prefWidth="265.0">
         <panes>
           <TitledPane fx:id="titledPaneStats" animated="false" prefHeight="300.0" prefWidth="202.0" text="Statistics">
             <content>
@@ -55,6 +56,9 @@
             </content>
           </TitledPane>
         </panes>
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor>
       </Accordion>
    </children>
    <opaqueInsets>
