--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -37,7 +37,7 @@
       </MenuBar>
       <Separator layoutY="90.0" prefHeight="10.0" prefWidth="1366.0" />
       <Pane fx:id="mainPane" layoutY="95.0" onDragDropped="#mainPane_OnDragDropped" onMouseClicked="#mainPane_OnMouseClicked" onMouseDragged="#mainPane_OnMouseDragged" onMouseMoved="#mainPane_OnMouseMoved" onMouseReleased="#mainPane_OnMouseReseased" prefHeight="608.0" prefWidth="1366.0" />
-      <Button fx:id="clearAllButton" layoutX="354.0" layoutY="36.0" mnemonicParsing="false" onMouseClicked="#clearAllButton_OnMouseClicked" prefHeight="50.0" prefWidth="50.0" />
+      <Button fx:id="clearAllButton" layoutX="524.0" layoutY="36.0" mnemonicParsing="false" onMouseClicked="#clearAllButton_OnMouseClicked" prefHeight="50.0" prefWidth="50.0" />
       <ToggleButton fx:id="circleToggleButton" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <ToggleButton fx:id="squareToggleButton" layoutX="70.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <ToggleButton fx:id="moveToggleButton" layoutX="186.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
@@ -46,7 +46,7 @@
          <font>
             <Font name="Gabriola" size="44.0" />
          </font></Label>
-      <ToggleButton fx:id="removeToggleButton" layoutX="293.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="removeToggleButton" layoutX="460.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <Accordion fx:id="accordionStats" layoutX="1100.0" layoutY="29.0" prefHeight="300.0" prefWidth="265.0">
         <panes>
           <TitledPane fx:id="titledPaneStats" animated="false" prefHeight="300.0" prefWidth="202.0" text="Statistics">
@@ -56,6 +56,8 @@
           </TitledPane>
         </panes>
       </Accordion>
+      <ToggleButton fx:id="addTokenToggleButton" layoutX="277.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="removeTokenToggleButton" layoutX="338.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
    </children>
    <opaqueInsets>
       <Insets />
