--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OpenAPTController">
-	<!-- TODO Add Nodes -->
+
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="application.OpenAPTController">
+   <children>
+      <Pane prefHeight="600.0" prefWidth="600.0">
+         <children>
+            <Label fx:id="headLabel" layoutX="153.0" layoutY="14.0" text="Modify this pane to open APT file">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="typeLabel" layoutX="51.0" layoutY="93.0" text="Type of net:" />
+            <ChoiceBox fx:id="typeChoiceBox" layoutX="167.0" layoutY="89.0" prefWidth="150.0" />
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
-
