--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="application.OpenAPTController">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OpenAPTController">
    <children>
       <Pane prefHeight="600.0" prefWidth="600.0">
          <children>
@@ -16,8 +17,11 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label fx:id="typeLabel" layoutX="51.0" layoutY="93.0" text="Type of net:" />
-            <ChoiceBox fx:id="typeChoiceBox" layoutX="167.0" layoutY="89.0" prefWidth="150.0" />
+            <Label fx:id="typeLabel" layoutX="47.0" layoutY="214.0" text="Type of net:" />
+            <ChoiceBox fx:id="typeChoiceBox" layoutX="153.0" layoutY="210.0" prefWidth="150.0" />
+            <Label fx:id="fileLabel" layoutX="64.0" layoutY="103.0" text="File:" />
+            <Button fx:id="selectFileButton" layoutX="414.0" layoutY="99.0" mnemonicParsing="false" onAction="#selectFileButton_OnAction" text="Select" />
+            <TextField fx:id="fileTextField" layoutX="154.0" layoutY="99.0" />
          </children>
       </Pane>
    </children>
