--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -4,26 +4,39 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OpenAPTController">
+<AnchorPane prefHeight="320.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OpenAPTController">
    <children>
-      <Pane prefHeight="600.0" prefWidth="600.0">
+      <Pane prefHeight="320.0" prefWidth="320.0">
          <children>
-            <Label fx:id="headLabel" layoutX="153.0" layoutY="14.0" text="Modify this pane to open APT file">
+            <Label fx:id="headLabel" layoutX="14.0" layoutY="14.0" text="Modify this pane to open APT file">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label fx:id="typeLabel" layoutX="47.0" layoutY="214.0" text="Type of net:" />
-            <ChoiceBox fx:id="typeChoiceBox" layoutX="153.0" layoutY="210.0" prefWidth="150.0" />
-            <Label fx:id="fileLabel" layoutX="64.0" layoutY="103.0" text="File:" />
-            <Button fx:id="selectFileButton" layoutX="414.0" layoutY="99.0" mnemonicParsing="false" onAction="#selectFileButton_OnAction" text="Select" />
-            <TextField fx:id="fileTextField" layoutX="154.0" layoutY="99.0" />
-            <Button fx:id="openButton" layoutX="154.0" layoutY="458.0" mnemonicParsing="false" onAction="#openButton_OnAction" text="Open" />
-            <Button fx:id="closeButton" layoutX="303.0" layoutY="446.0" mnemonicParsing="false" onAction="#closeButton_OnAction" text="Close" />
+            <Label fx:id="typeLabel" layoutX="103.0" layoutY="151.0" text="TYPE OF NET">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect></Label>
+            <ChoiceBox fx:id="typeChoiceBox" layoutX="79.0" layoutY="178.0" prefWidth="150.0" />
+            <Label fx:id="fileLabel" layoutX="138.0" layoutY="44.0" text="FILE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect></Label>
+            <Button fx:id="selectFileButton" layoutX="109.0" layoutY="102.0" mnemonicParsing="false" onAction="#selectFileButton_OnAction" prefHeight="25.0" prefWidth="90.0" text="Select" />
+            <TextField fx:id="fileTextField" layoutX="14.0" layoutY="71.0" prefHeight="25.0" prefWidth="295.0" />
+            <Button fx:id="openButton" layoutX="86.0" layoutY="243.0" mnemonicParsing="false" onAction="#openButton_OnAction" text="Open" />
+            <Button fx:id="closeButton" layoutX="177.0" layoutY="243.0" mnemonicParsing="false" onAction="#closeButton_OnAction" text="Close" />
          </children>
       </Pane>
    </children>
