--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -30,6 +30,12 @@
               	  <MenuItem fx:id="exitMenuItem" mnemonicParsing="false" onAction="#exitMenuItem_OnAction" text="Exit" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Misc">
+              <items>
+                <MenuItem fx:id="showStatisticsMenuItem" mnemonicParsing="false" onAction="#showStatisticsMenuItem_OnAction" text="Show statistics" />
+                  <MenuItem fx:id="exportPdfMenuItem" mnemonicParsing="false" onAction="#exportPdfMenuItem_OnAction" text="Export PDF" />
+              </items>
+            </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
               <MenuItem fx:id="aboutMenuItem" mnemonicParsing="false" onAction="#aboutMenuItem_OnAction" text="About" />
@@ -51,15 +57,7 @@
             <Font name="Gabriola" size="44.0" />
          </font></Label>
       <ToggleButton fx:id="removeToggleButton" layoutX="593.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      <Accordion fx:id="accordionStats" layoutX="1100.0" layoutY="29.0" prefHeight="300.0" prefWidth="265.0">
-        <panes>
-          <TitledPane fx:id="titledPaneStats" animated="false" prefHeight="300.0" prefWidth="202.0" text="Statistics">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </TitledPane>
-        </panes>
-      </Accordion>
+      
       <ToggleButton fx:id="removeTagToggleButton" layoutX="490.0" layoutY="36.0" mnemonicParsing="false" onAction="#removeTagToggleButton_OnAction" prefHeight="50.0" prefWidth="50.0" />
 
    </children>
