--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -9,7 +8,6 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -17,7 +15,7 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#anchorPane_OnMouseClicked" prefHeight="700.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
    <children>
-      <ToggleButton fx:id="addTagToggleButton" layoutX="427.0" layoutY="36.0" mnemonicParsing="false" onAction="#addTagToggleButton_OnAction" prefHeight="50.0" prefWidth="50.0" />
+
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="1366.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
@@ -45,20 +43,28 @@
       </MenuBar>
       <Separator layoutY="90.0" prefHeight="10.0" prefWidth="1366.0" />
       <Pane fx:id="mainPane" layoutY="95.0" onDragDropped="#mainPane_OnDragDropped" onMouseClicked="#mainPane_OnMouseClicked" onMouseDragged="#mainPane_OnMouseDragged" onMouseMoved="#mainPane_OnMouseMoved" onMouseReleased="#mainPane_OnMouseReseased" prefHeight="608.0" prefWidth="1366.0" />
-      <Button fx:id="clearAllButton" layoutX="653.0" layoutY="36.0" mnemonicParsing="false" onMouseClicked="#clearAllButton_OnMouseClicked" prefHeight="50.0" prefWidth="50.0" />
+      <Button fx:id="clearAllButton" layoutX="723.0" layoutY="36.0" mnemonicParsing="false" onMouseClicked="#clearAllButton_OnMouseClicked" prefHeight="50.0" prefWidth="50.0" />
       <ToggleButton fx:id="circleToggleButton" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      <ToggleButton fx:id="squareToggleButton" layoutX="70.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      <ToggleButton fx:id="moveToggleButton" layoutX="186.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      <ToggleButton fx:id="lineToggleButton" layoutX="127.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      <ToggleButton fx:id="addTokenToggleButton" layoutX="277.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      <ToggleButton fx:id="removeTokenToggleButton" layoutX="338.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="squareToggleButton" layoutX="69.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="moveToggleButton" layoutX="179.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="lineToggleButton" layoutX="124.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="addTokenToggleButton" layoutX="245.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="addTagToggleButton" layoutX="365.0" layoutY="36.0" mnemonicParsing="false" onAction="#addTagToggleButton_OnAction" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="removeTokenToggleButton" layoutX="300.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
       <Label fx:id="middleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="427.0" layoutY="300" mnemonicParsing="false" prefHeight="58.0" prefWidth="551.0">
          <font>
             <Font name="Gabriola" size="44.0" />
          </font></Label>
-      <ToggleButton fx:id="removeToggleButton" layoutX="593.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
-      
-      <ToggleButton fx:id="removeTagToggleButton" layoutX="490.0" layoutY="36.0" mnemonicParsing="false" onAction="#removeTagToggleButton_OnAction" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="removeToggleButton" layoutX="668.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+
+      <ToggleButton fx:id="removeTagToggleButton" layoutX="420.0" layoutY="36.0" mnemonicParsing="false" onAction="#removeTagToggleButton_OnAction" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="startAnimationToggleButton" layoutX="488.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <ToggleButton fx:id="pauseAnimationToggleButton" layoutX="543.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" />
+      <Button fx:id="stopAnimationButton" layoutX="598.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0"  onAction="#stopAnimationButton_OnAction"/>
+      <Separator fx:id="toggleButtonSeparator1" layoutX="235.0" layoutY="29.0" orientation="VERTICAL" prefHeight="66.0" prefWidth="2.0" />
+      <Separator fx:id="toggleButtonSeparator2" layoutX="355.0" layoutY="29.0" orientation="VERTICAL" prefHeight="66.0" prefWidth="2.0" />
+      <Separator fx:id="toggleButtonSeparator3" layoutX="478.0" layoutY="29.0" orientation="VERTICAL" prefHeight="66.0" prefWidth="2.0" />
+      <Separator fx:id="toggleButtonSeparator4" layoutX="658.0" layoutY="29.0" orientation="VERTICAL" prefHeight="66.0" prefWidth="2.0" />
 
    </children>
    <opaqueInsets>
