--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -25,7 +25,7 @@
                <effect>
                   <DropShadow />
                </effect></Label>
-            <ChoiceBox fx:id="typeChoiceBox" layoutX="16.0" layoutY="243.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="typeChoiceBox" layoutX="224.0" layoutY="183.0" prefWidth="150.0" />
             <Label fx:id="fileLabel" layoutX="284.0" layoutY="44.0" text="FILE">
                <font>
                   <Font size="18.0" />
@@ -38,7 +38,14 @@
             <Button fx:id="openButton" layoutX="229.0" layoutY="504.0" mnemonicParsing="false" onAction="#openButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Open" />
             <Button fx:id="closeButton" layoutX="326.0" layoutY="504.0" mnemonicParsing="false" onAction="#closeButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Close" />
             <Button fx:id="infoAboutNetButton" layoutX="231.0" layoutY="561.0" mnemonicParsing="false" onAction="#infoAboutNetButton_OnAction" prefHeight="25.0" prefWidth="157.0" text="Check info about net" />
-            <Label fx:id="descriptionLabel" layoutX="111.0" layoutY="313.0" prefHeight="17.0" prefWidth="251.0" />
+            <Label fx:id="descriptionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="16.0" layoutY="254.0" prefHeight="56.0" prefWidth="567.0" />
+            <Label fx:id="descTextLabel" layoutX="245.0" layoutY="227.0" text="DESCRIPTION">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect></Label>
          </children>
       </Pane>
    </children>
