--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -5,14 +5,16 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="700.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OpenAPTController">
    <children>
-      <Pane prefHeight="700.0" prefWidth="870.0">
+      <Pane fx:id="mainPane" prefHeight="700.0" prefWidth="870.0">
          <children>
             <Label fx:id="headLabel" layoutX="186.0" layoutY="14.0" text="Modify this pane to open APT file">
                <font>
@@ -35,9 +37,39 @@
                </effect></Label>
             <Button fx:id="selectFileButton" layoutX="282.0" layoutY="71.0" mnemonicParsing="false" onAction="#selectFileButton_OnAction" prefHeight="25.0" prefWidth="103.0" text="Select manually" />
             <TextField fx:id="fileTextField" layoutX="14.0" layoutY="96.0" prefHeight="25.0" prefWidth="640.0" />
-            <Button fx:id="openButton" layoutX="677.0" layoutY="38.0" mnemonicParsing="false" onAction="#openButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Open" />
-            <Button fx:id="closeButton" layoutX="781.0" layoutY="38.0" mnemonicParsing="false" onAction="#closeButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Close" />
-            <Button fx:id="infoAboutNetButton" layoutX="685.0" layoutY="96.0" mnemonicParsing="false" onAction="#infoAboutNetButton_OnAction" prefHeight="25.0" prefWidth="157.0" text="Check info about net" />
+            <Button fx:id="openButton" layoutX="677.0" layoutY="38.0" mnemonicParsing="false" onAction="#openButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Open">
+               <effect>
+                  <SepiaTone>
+                     <input>
+                        <Blend mode="MULTIPLY" />
+                     </input>
+                  </SepiaTone>
+               </effect>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="closeButton" layoutX="781.0" layoutY="38.0" mnemonicParsing="false" onAction="#closeButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Close">
+               <effect>
+                  <SepiaTone>
+                     <input>
+                        <Blend mode="MULTIPLY" />
+                     </input>
+                  </SepiaTone>
+               </effect>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="infoAboutNetButton" layoutX="685.0" layoutY="96.0" mnemonicParsing="false" onAction="#infoAboutNetButton_OnAction" prefHeight="25.0" prefWidth="157.0" text="Execute command">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <effect>
+                  <SepiaTone>
+                     <input>
+                        <Blend mode="MULTIPLY" />
+                     </input>
+                  </SepiaTone>
+               </effect></Button>
             <Label fx:id="descriptionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="589.0" prefHeight="75.0" prefWidth="640.0" />
             <Label fx:id="descTextLabel" layoutX="279.0" layoutY="562.0" text="DESCRIPTION">
                <font>
