--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -90,6 +90,10 @@
             <Label fx:id="wordLabel" layoutX="467.0" layoutY="456.0" text="Word:" />
             <Label fx:id="warningLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="132.0" layoutY="121.0" prefHeight="17.0" prefWidth="405.0" text="YOU NEED TO SELECT '-NET' FILE. THIS FILE MAY NOT WORK CORRETLY" textFill="RED" underline="true" />
             <Button fx:id="outputFileButton" layoutX="132.0" layoutY="174.0" mnemonicParsing="false" onAction="#outputFileButton_OnAction" text="Select output file" />
+            <Label fx:id="eventLabel1" layoutX="234.0" layoutY="494.0" text="Event:" />
+            <Label fx:id="eventLabel2" layoutX="454.0" layoutY="494.0" text="Reverse event:" />
+            <TextField fx:id="eventTextField1" layoutX="266.0" layoutY="490.0" prefHeight="25.0" prefWidth="120.0" />
+            <TextField fx:id="eventTextField2" layoutX="530.0" layoutY="490.0" prefHeight="25.0" prefWidth="120.0" />
          </children>
       </Pane>
    </children>
